--- a/adminpage.css
+++ b/adminpage.css
@@ -52,6 +52,10 @@ body {
     margin-top:10%;
 }
 
+.passenger .container{
+    margin-top:2%;
+}
+
 
 .table-wrapper {
     background: #fff;
@@ -262,3 +266,14 @@ table.table .avatar {
 .modal form label {
     font-weight: normal;
 }	
+
+#myInput {
+    background-image: url('searchicon.png');
+    background-position: 10px 10px;
+    background-repeat: no-repeat;
+    width: 100%;
+    font-size: 16px;
+    padding: 12px 20px 12px 40px;
+    border: 1px solid #ddd;
+    margin-top: 100px;
+  }
